<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MovieList</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text_tab1">Tab1</string>
    <string name="text_tab2">Tab2</string>
    <string name="text_tab3">Tab3</string>
    <string name="text_tab_header">Custom header</string>
    <string name="search_label">Search</string>
    <string name="search_hint">Search Names</string>
    <string name="posterDescription">Image Poster</string>
    <string name="title">Title</string>
    <string name="genres">Genres :</string>
    <string name="release">Release</string>
    <string name="runtime">Runtime</string>
    <string name="budget">Budget</string>
    <string name="description">Description :</string>
    <string name="starDescription">little star</string>
    <string name="postImg">Posted Image</string>
    <string name="date">Date</string>
    <string name="presence">Presence Away</string>
    <string name="voteCnt">Vote count</string>
    <string name="avg">AVG</string>
    <string name="homepage">Homepage</string>
    <string name="titleName">Movie Title</string>
    <string name="menuHelper">ic menu helper</string>
    <string name="login">login</string>
    <string name="search">search</string>


    <string name="drawer_item_popular">Popular</string>
    <string name="drawer_item_upcoming">Upcoming</string>
    <string name="drawer_item_top_rated">Top Rated</string>
    <string name="drawer_item_user">User Details</string>
    <string name="drawer_item_favorites">Favorites</string>
    <string name="drawer_item_watch_list">Watch List</string>
    <string name="drawer_item_login">Login</string>
    <string name="drawer_item_logout">Logout</string>

    <string name="drawer_item_discover">Discover</string>
    <string name="drawer_item_search">Search</string>
    <string name="refresh">Refresh</string>
    <string name="done">Done</string>
    <string name="movie1">Movie1</string>
    <string name="movie2">Movie2</string>
    <string name="mark">Mark</string>
    <string name="personName">Person Name</string>
    <string name="people">People :</string>
    <string name="rating">Rating :</string>
    <string name="sort">Sort by :</string>
    <string name="year">Year :</string>
    <string name="adult">Adult :</string>
    <string name="discover">DISCOVER</string>
    <string name="signUp">Sign Up</string>
    <string name="signIn">Sign In</string>
    <string name="emptyList">No Items</string>
    <string name="cast">Cast :</string>


    <string name="facebook_app_id">648058138671134</string>

    <string-array name="sort_by_array">
        <item>None</item>
        <item>Release Date asc</item>
        <item>Release Date desc</item>
        <item>Popularity asc</item>
        <item>Popularity desc</item>
        <item>Vote Average asc</item>
        <item>Vote Average desc</item>
        <item>Vote Count asc</item>
        <item>Vote Count desc</item>
    </string-array>

    <string-array name="rating_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
    </string-array>

    <string-array name="year_order_array">
        <item>None</item>
        <item>Greater</item>
        <item>Less</item>
    </string-array>

    <string-array name="genres_array">
        <item>None</item>
        <item>Action</item>
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Crime</item>
        <item>Drama</item>
        <item>Documentary</item>
        <item>Fantasy</item>
        <item>History</item>
        <item>Horror</item>
        <item>Mystery</item>
        <item>Romance</item>
        <item>Thriller</item>
        <item>War</item>
    </string-array>

</resources>
