<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/detailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/posterImageView"
                    android:layout_width="210dp"
                    android:layout_height="300dp"
                    android:layout_margin="5dp"
                    android:contentDescription="@string/postImg" />

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="23dp"
                        android:layout_margin="1dp"
                        android:text="@string/title"
                        android:textColor="#FB8C00"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/titleTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="23dp"
                        android:layout_margin="1dp"
                        android:text="@string/genres"
                        android:textColor="#FB8C00"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/genresTxtView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="23dp"
                        android:layout_margin="1dp"
                        android:text="@string/release"
                        android:textColor="#FB8C00"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/releaseTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="23dp"
                        android:layout_margin="1dp"
                        android:text="@string/runtime"
                        android:textColor="#FB8C00"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/runtimeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="23dp"
                        android:layout_margin="1dp"
                        android:text="@string/budget"
                        android:textColor="#FB8C00"
                        android:textSize="18sp" />

                    <TextView
                        android:id="@+id/budgetTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/detailStarImageView"
                    android:layout_width="40dp"
                    android:layout_height="45dp"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="3dp"
                    android:contentDescription="@string/starDescription"
                    android:src="@android:drawable/star_big_off" />

                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/detailsAvgView"
                        android:layout_width="wrap_content"
                        android:layout_height="50dp"
                        android:layout_marginLeft="10dp"
                        android:textSize="36sp" />

                    <TextView
                        android:id="@+id/countView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="3dp"
                        android:layout_toRightOf="@+id/detailsAvgView"
                        android:textColor="#FB8C00"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/addFav"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_marginEnd="22dp"
                        android:layout_marginRight="22dp"
                        android:layout_toLeftOf="@+id/addWatch"
                        android:layout_toStartOf="@+id/addWatch" />

                    <Button
                        android:id="@+id/addWatch"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_marginEnd="22dp"
                        android:layout_marginRight="22dp" />

                </RelativeLayout>

            </LinearLayout>

            <org.lucasr.twowayview.TwoWayView
                android:id="@+id/lvItems"
                style="@style/TwoWayView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="3dp"
                android:drawSelectorOnTop="false" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="1dp"
                android:orientation="vertical">

                <RatingBar
                    android:id="@+id/ratingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:numStars="5"
                    android:paddingTop="5dp"
                    android:progressDrawable="@drawable/ratebar_holo_light_orange"
                    android:rating="0" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FB8C00" />

                <TextView
                    android:id="@+id/detailsDescriptionView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cast"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#FB8C00" />

                <org.lucasr.twowayview.TwoWayView
                    android:id="@+id/castLvItems"
                    style="@style/TwoWayView"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_marginBottom="3dp"
                    android:drawSelectorOnTop="false" />

                <TextView
                    android:id="@+id/detailsHomePageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoLink="all"
                    android:linksClickable="true"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

            </LinearLayout>


        </LinearLayout>
    </ScrollView>


</LinearLayout>